<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.getmyapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.getmyapp.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
    </fragment>
    <fragment
        android:id="@+id/nav_missing"
        android:name="com.example.getmyapp.ui.missing.MissingFragment"
        android:label="@string/menu_missing"
        tools:layout="@layout/fragment_missing" />
    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.getmyapp.ui.login.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />
</navigation>